--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -114,34 +114,9 @@
   </match>
   <match target="pattern">
     <test qual="any" name="family">
-      <string>Monospace</string>
-    </test>
-    <edit binding="same" mode="prepend" name="family">
-      <string>Iosevka SS10</string>
-      <string>Iosevka</string>
-      <string>Fira Code</string>
-      <string>Monaco</string>
-      <string>Sarasa Term SC</string>
-      <string>Sarasa Term TC</string>
-      <string>Sarasa Term J</string>
-      <!--string>Symbols Nerd Font</string-->
-      <!--补全生僻字-->
-      <string>HanaMinA</string>
-      <string>HanaMinB</string>
-      <string>Twemoji</string>
-      <string>Twitter Color Emoji</string>
-      <string>Blobmoji</string>
-      <string>JoyPixels</string>
-      <string>Noto Color Emoji</string>
-      <string>Noto Emoji</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
       <string>emoji</string>
     </test>
-    <edit binding="same" mode="assign" name="family">
-      <string>Twemoji</string>
+    <edit binding="same" mode="prepend" name="family">
       <!--
           Twemoji Color Emoji use SVGinOpenType,
           it is only supported by Firefox.
@@ -150,8 +125,10 @@
       
           If FreeType support it, this problem will be solved.
           https://savannah.nongnu.org/bugs/?46141
+          FreeType support it now.
       -->
       <string>Twitter Color Emoji</string>
+      <string>Twemoji</string>
       <string>Blobmoji</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
