--- a/systemd/.config/systemd/user/fava.service
+++ b/systemd/.config/systemd/user/fava.service
@@ -3,7 +3,7 @@ Description=Fava daemon
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/fava -H 0.0.0.0 %h/accounting/ToC.bean
+ExecStart=/usr/bin/fava %h/accounting/ToC.bean
 Restart=on-failure
 
 [Install]
