--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -36,6 +36,8 @@ set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WIND
 # More friendly split pane
 bind-key h split-window -h
 bind-key v split-window -v
+bind-key '|' split-window -h
+bind-key - split-window -v
 
 # set border style
 set -g pane-border-lines double
