--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -21,6 +21,11 @@ Host codereview.qt-project.org
     PubkeyAcceptedKeyTypes +ssh-rsa
     MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha1
 
+Host archlinuxcn
+    User coelacanthus
+    Hostname build.archlinuxcn.org
+    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
+
 Match all
     ControlMaster auto
     ControlPath ~/.ssh/socket/%h-%p-%r
