sysctl : disable some harden

--- a/sysctl/99-sysctl.conf
+++ b/sysctl/99-sysctl.conf
@@ -37,7 +37,7 @@ kernel.core_uses_pid = 1
 
 # restrict access to kernel address
 # kernel pointers printed using %pK will be replaced with 0’s regardless of privileges
-kernel.kptr_restrict = 2
+kernel.kptr_restrict = 1
 
 # Ptrace protection using Yama
 #   - 1: only a parent process can be debugged
@@ -52,7 +52,7 @@ kernel.dmesg_restrict = 1
 kernel.unprivileged_bpf_disabled = 1
 
 # disables kexec as it can be used to livepatch the running kernel
-kernel.kexec_load_disabled = 1
+kernel.kexec_load_disabled = 0
 
 # enable unprivileged user namespaces to use bubblewrap
 kernel.unprivileged_userns_clone = 1
@@ -67,14 +67,14 @@ kernel.pid_max = 4194304
 #kernel.panic = 10
 
 # restrict perf subsystem usage
-kernel.perf_event_paranoid = 3
-kernel.perf_cpu_time_max_percent = 1
-kernel.perf_event_max_sample_rate = 1
+kernel.perf_event_paranoid = 1
+#kernel.perf_cpu_time_max_percent = 1
+#kernel.perf_event_max_sample_rate = 0
 
 ########## File System ##########
 
 # disallow core dumping by SUID/SGID programs
-fs.suid_dumpable = 0
+#fs.suid_dumpable = 0
 
 # protect the creation of hard links
 # one of the following conditions must be fulfilled
@@ -123,7 +123,7 @@ net.core.netdev_max_backlog = 250000
 
 # enable BPF JIT hardening for all users
 # this trades off performance, but can mitigate JIT spraying
-net.core.bpf_jit_harden = 2
+#net.core.bpf_jit_harden = 2
 
 # increase TCP max buffer size setable using setsockopt()
 net.core.rmem_max = 16777216
