sysctl: optimize net perf

--- a/sysctl/99-sysctl.conf
+++ b/sysctl/99-sysctl.conf
@@ -161,48 +161,47 @@ net.ipv4.tcp_syncookies = 1
 net.ipv4.tcp_synack_retries = 5
 
 # do not send redirects
-net.ipv4.conf.default.send_redirects = 0
-net.ipv4.conf.all.send_redirects = 0
+# default 1
+#net.ipv4.conf.default.send_redirects = 0
+#net.ipv4.conf.all.send_redirects = 0
 
-# do not accept packets with SRR option
-net.ipv4.conf.default.accept_source_route = 0
-net.ipv4.conf.all.accept_source_route = 0
+# accept packets with SRR option
+# for route
+#net.ipv4.conf.default.accept_source_route = 0
+#net.ipv4.conf.all.accept_source_route = 0
 
-# enable reverse path source validation (BCP38)
+# enable loose reverse path source validation (BCP38)
 # refer to RFC1812, RFC2827, and BCP38 (http://www.bcp38.info)
-net.ipv4.conf.default.rp_filter = 1
-net.ipv4.conf.all.rp_filter = 1
+net.ipv4.conf.default.rp_filter = 2
+net.ipv4.conf.all.rp_filter = 2
 
 # log packets with impossible addresses to kernel log
 net.ipv4.conf.default.log_martians = 1
 net.ipv4.conf.all.log_martians = 1
 
-# do not accept ICMP redirect messages
-net.ipv4.conf.default.accept_redirects = 0
-net.ipv4.conf.default.secure_redirects = 0
-net.ipv4.conf.all.accept_redirects = 0
-net.ipv4.conf.all.secure_redirects = 0
-
-# disable sending and receiving of shared media redirects
+# enable sending and receiving of shared media redirects
 # this setting overwrites net.ipv4.conf.all.secure_redirects
 # refer to RFC1620
-net.ipv4.conf.default.shared_media = 0
-net.ipv4.conf.all.shared_media = 0
+net.ipv4.conf.default.shared_media = 1
+net.ipv4.conf.all.shared_media = 1
 
 # always use the best local address for announcing local IP via ARP
 net.ipv4.conf.default.arp_announce = 2
 net.ipv4.conf.all.arp_announce = 2
 
 # reply only if the target IP address is local address configured on the incoming interface
-net.ipv4.conf.default.arp_ignore = 1
-net.ipv4.conf.all.arp_ignore = 1
+# default 0
+#net.ipv4.conf.default.arp_ignore = 1
+#net.ipv4.conf.all.arp_ignore = 1
 
 # drop Gratuitous ARP frames to prevent ARP poisoning
 # this can cause issues when ARP proxies are used in the network
-net.ipv4.conf.default.drop_gratuitous_arp = 1
-net.ipv4.conf.all.drop_gratuitous_arp = 1
+# default 0
+#net.ipv4.conf.default.drop_gratuitous_arp = 1
+#net.ipv4.conf.all.drop_gratuitous_arp = 1
 
 # ignore all ICMP echo requests
+# default 0
 #net.ipv4.icmp_echo_ignore_all = 1
 
 # ignore all ICMP echo and timestamp requests sent to broadcast/multicast
@@ -231,13 +230,12 @@ net.ipv4.ip_local_port_range = 1024 65535
 # - 1: enable timestamps as defined in RFC1323 and use random offset for
 #        each connection rather than only using the current time
 # - 2: enable timestamps without random offsets
-net.ipv4.tcp_timestamps = 0
+net.ipv4.tcp_timestamps = 1
 
 # enabling SACK can increase the throughput
 # but SACK is commonly exploited and rarely used
-net.ipv4.tcp_sack = 0
-net.ipv4.tcp_dsack = 0
-net.ipv4.tcp_fack = 0
+net.ipv4.tcp_sack = 1
+net.ipv4.tcp_dsack = 1
 
 # divide socket buffer evenly between TCP window size and application
 net.ipv4.tcp_adv_win_scale = 1
@@ -263,32 +261,39 @@ net.ipv6.conf.default.forwarding = 1
 net.ipv6.conf.all.forwarding = 1
 
 # number of Router Solicitations to send until assuming no routers are present
-net.ipv6.conf.default.router_solicitations = 0
-net.ipv6.conf.all.router_solicitations = 0
+# default 3
+#net.ipv6.conf.default.router_solicitations = 0
+#net.ipv6.conf.all.router_solicitations = 0
 
 # do not accept Router Preference from RA
-net.ipv6.conf.default.accept_ra_rtr_pref = 0
-net.ipv6.conf.all.accept_ra_rtr_pref = 0
+# default follow accept_ra
+#net.ipv6.conf.default.accept_ra_rtr_pref = 0
+#net.ipv6.conf.all.accept_ra_rtr_pref = 0
 
 # learn prefix information in router advertisement
-net.ipv6.conf.default.accept_ra_pinfo = 0
-net.ipv6.conf.all.accept_ra_pinfo = 0
+# default follow accept_ra
+#net.ipv6.conf.default.accept_ra_pinfo = 0
+#net.ipv6.conf.all.accept_ra_pinfo = 0
 
 # setting controls whether the system will accept Hop Limit settings from a router advertisement
-net.ipv6.conf.default.accept_ra_defrtr = 0
-net.ipv6.conf.all.accept_ra_defrtr = 0
+# default follow accept_ra
+#net.ipv6.conf.default.accept_ra_defrtr = 0
+#net.ipv6.conf.all.accept_ra_defrtr = 0
 
 # router advertisements can cause the system to assign a global unicast address to an interface
-net.ipv6.conf.default.autoconf = 0
-net.ipv6.conf.all.autoconf = 0
+# default follow accept_ra_pinfo
+#net.ipv6.conf.default.autoconf = 0
+#net.ipv6.conf.all.autoconf = 0
 
 # number of neighbor solicitations to send out per address
-net.ipv6.conf.default.dad_transmits = 0
-net.ipv6.conf.all.dad_transmits = 0
+# default 1
+#net.ipv6.conf.default.dad_transmits = 0
+#net.ipv6.conf.all.dad_transmits = 0
 
 # number of global unicast IPv6 addresses can be assigned to each interface
-net.ipv6.conf.default.max_addresses = 1
-net.ipv6.conf.all.max_addresses = 1
+# default 16
+#net.ipv6.conf.default.max_addresses = 1
+#net.ipv6.conf.all.max_addresses = 1
 
 # enable IPv6 Privacy Extensions (RFC3041) and prefer the temporary address
 net.ipv6.conf.default.use_tempaddr = 2
@@ -298,9 +303,10 @@ net.ipv6.conf.all.use_tempaddr = 2
 net.ipv6.conf.default.accept_redirects = 0
 net.ipv6.conf.all.accept_redirects = 0
 
-# do not accept packets with SRR option
-net.ipv6.conf.default.accept_source_route = 0
-net.ipv6.conf.all.accept_source_route = 0
+# accept packets with SRR option
+# for route
+net.ipv6.conf.default.accept_source_route = 1
+net.ipv6.conf.all.accept_source_route = 1
 
 # ignore all ICMPv6 echo requests
 #net.ipv6.icmp.echo_ignore_all = 1
