tmux,fontconfig: format

--- a/fontconfig/.config/fontconfig/conf.d/45-setting.conf
+++ b/fontconfig/.config/fontconfig/conf.d/45-setting.conf
@@ -1,31 +1,31 @@
-<?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
   <description>渲染设置</description>
   <match target="scan">
     <!-- 抗锯齿 -->
     <!-- 抗锯齿. 除非你的屏幕DPI奇高否则建议开启. -->
-    <edit name="antialias" mode="assign">
+    <edit mode="assign" name="antialias">
       <bool>true</bool>
     </edit>
     <!-- 字体提示 -->
     <!-- BCI (字节码解释器) -->
-    <edit name="hinting" mode="assign">
+    <edit mode="assign" name="hinting">
       <bool>true</bool>
     </edit>
     <!-- 自动微调 -->
-    <edit name="autohint" mode="assign">
+    <edit mode="assign" name="autohint">
       <bool>false</bool>
     </edit>
     <!-- Hintstyle -->
     <!-- 字体微调的程度, 可选为 hintnone, hintslight, hintmedium, hintfull. -->
     <!-- 简单来说，更高的 hinting 等级可以使字体更锐利，但同时也会损失更多的细节. -->
-    <edit name="hintstyle" mode="assign">
+    <edit mode="assign" name="hintstyle">
       <const>hintslight</const>
     </edit>
     <!-- 像素对齐 -->
     <!-- 显示器使用的像素排列方式. 现代显示器基本都是用rgb排列. -->
-    <edit name="rgba" mode="assign">
+    <edit mode="assign" name="rgba">
       <const>rgb</const>
     </edit>
     <!-- 亚像素渲染风格：lcdlight表示优先减轻笔画模糊程度，lcddefault表示优先消除彩色边纹 -->
@@ -43,39 +43,39 @@
   </match>
   <!-- Twemoji 不支持关闭内嵌点阵 -->
   <match target="scan">
-    <test qual="any" name="family">
+    <test name="family" qual="any">
       <string>Twemoji</string>
     </test>
-    <edit name="embeddedbitmap" mode="assign">
+    <edit mode="assign" name="embeddedbitmap">
       <bool>true</bool>
     </edit>
   </match>
   <!-- Noto Color Emoji 不支持开启抗锯齿和微调，所以在全局开启之后还得给它关掉。 -->
   <match target="scan">
-    <test qual="any" name="family">
+    <test name="family" qual="any">
       <string>Noto Color Emoji</string>
     </test>
-    <edit name="scalable" mode="assign">
+    <edit mode="assign" name="scalable">
       <bool>true</bool>
     </edit>
-    <edit name="embeddedbitmap" mode="assign">
+    <edit mode="assign" name="embeddedbitmap">
       <bool>true</bool>
     </edit>
-    <edit name="hinting" mode="assign">
+    <edit mode="assign" name="hinting">
       <bool>false</bool>
     </edit>
-    <edit name="antialias" mode="assign">
+    <edit mode="assign" name="antialias">
       <bool>false</bool>
     </edit>
   </match>
   <match target="scan">
-    <test qual="any" name="family"  compare="contains">
+    <test compare="contains" name="family" qual="any">
       <string>Sarasa</string>
     </test>
-    <edit name="hinting" mode="assign">
+    <edit mode="assign" name="hinting">
       <bool>false</bool>
     </edit>
-    <edit name="autohint" mode="assign">
+    <edit mode="assign" name="autohint">
       <bool>false</bool>
     </edit>
   </match>
