--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -23,9 +23,13 @@ bind -n WheelDownPane if-shell -Ft= "#{alternate_on}" "send-keys -t= down" "sele
 bind r source-file ~/.config/tmux/tmux.conf \; display 'tmux.conf sourced'
 
 # set 256 colors or truecolor
-if-shell "(( $(tput colors) >= 256 ))" "set -g default-terminal tmux-256color"
+if-shell "(( $(tput colors) >= 256 ))" {
+    set -g default-terminal tmux-256color
+}
 # 启用上划线和 RGB 支持
-if-shell "[[ $COLORTERM =~ (24bit|truecolor) ]]" "set -ga terminal-features ',*:RGB:usstyle:overline'"
+if-shell "[[ $COLORTERM =~ (24bit|truecolor) ]]" {
+    set -ga terminal-features ',*:RGB:usstyle:overline'
+}
 
 # boost history
 set -g history-limit 50000
@@ -84,6 +88,8 @@ bind M-i if-shell "test ! -d ~/.local/share/tmux/plugins/tpm" \
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.local/share/tmux/plugins"
-if-shell 'test -d ~/.local/share/tmux/plugins/tpm' "run -b '~/.local/share/tmux/plugins/tpm/tpm'"
+if 'test -d ~/.local/share/tmux/plugins/tpm' {
+    run -b '~/.local/share/tmux/plugins/tpm/tpm'
+}
 
 # kate: space-indent on; indent-width 4; syntax bash;
