--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -125,6 +125,7 @@ anti_flood_prio_high = 2
 anti_flood_prio_low = 2
 autoconnect = off
 autojoin = ""
+autojoin_dynamic = off
 autoreconnect = on
 autoreconnect_delay = 10
 autorejoin = off
@@ -196,6 +197,7 @@ libera.usermode
 libera.command
 libera.command_delay
 libera.autojoin = "#aosc,#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#gentoo-zh,#debian-zh,#fcitx,#archlinuxriscv"
+libera.autojoin_dynamic
 libera.autorejoin
 libera.autorejoin_delay
 libera.connection_timeout
@@ -240,6 +242,7 @@ hackint.usermode
 hackint.command
 hackint.command_delay
 hackint.autojoin = "#dn42"
+hackint.autojoin_dynamic
 hackint.autorejoin
 hackint.autorejoin_delay
 hackint.connection_timeout
