fontconfig: fix fonts.dtd URN

--- a/fontconfig/etc/conf.avail/66-qt.conf
+++ b/fontconfig/etc/conf.avail/66-qt.conf
@@ -1,5 +1,5 @@
 <?xml version='1.0'?>
-<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
+<!DOCTYPE fontconfig SYSTEM 'urn:fontconfig:fonts.dtd'>
 <fontconfig>
   <description>Adjust font order for Qt applications</description>
   <!-- https://blog.lilydjwg.me/2022/3/8/qt-font-issues.216133.html -->
