--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <!-- Configs based on https://sh.alynx.one/posts/Fontconfig-NotoColorEmoji-Antialias/local.conf -->
 <fontconfig>
   <!-- Default system-ui fonts -->
