--- a/fontconfig/.config/fontconfig/conf.d/51-replace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace.conf
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <!-- Configs based on https://github.com/rocka/dotFiles/blob/master/.config/fontconfig/conf.d/10-replace.conf -->
 <!-- Configs based on https://github.com/rydesun/dotfiles/blob/master/.config/fontconfig/conf.d/52-replace.conf -->
 <fontconfig>
