env: add NALI_HOME and re-enable GTK_USE_PORTAL

--- a/envvars/.config/environment.d/01-xdg-fix.conf
+++ b/envvars/.config/environment.d/01-xdg-fix.conf
@@ -37,6 +37,8 @@ PYLINTHOME="$XDG_CACHE_HOME"/pylint
 WAKATIME_HOME="$XDG_CONFIG_HOME"/wakatime
 # Wget
 WGETRC="$XDG_CONFIG_HOME"/wget/config.ini
+# Nali
+NALI_HOME="$XDG_CONFIG_HOME"/nali
 # NPM
 NPM_CONFIG_USERCONFIG="$XDG_CONFIG_HOME"/npm/npmrc
 # .octave_hist and .octave_packages
