sync mutt fcitx5 vim

--- a/fontconfig/.config/fontconfig/conf.d/52-telegram-font.conf
+++ b/fontconfig/.config/fontconfig/conf.d/52-telegram-font.conf
@@ -7,7 +7,7 @@
       <string>telegram-desktop</string>
     </test>
     <test qual="any" name="family">
-      <string>sans</string>
+      <string>sans-serif</string>
     </test>
     <edit binding="same" mode="prepend" name="family">
       <string>Roboto</string>
