--- a/fcitx5/.config/fcitx5/conf/classicui.conf
+++ b/fcitx5/.config/fcitx5/conf/classicui.conf
@@ -5,7 +5,7 @@ PerScreenDPI=True
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # 字体
-Font="Sans Serif 11"
+Font="霞鹜文楷 Bold 12"
 # 菜单字体
 MenuFont="Sans 10"
 # 托盘字体
