--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,9 @@
 	path = zsh/.config/zsh.d/plugins/zsh-history-substring-search
 	url = https://github.com/zsh-users/zsh-history-substring-search.git
 	ignore = untracked
+[submodule "zsh/.config/zsh.d/plugins/zsh-async"]
+	path = zsh/.config/zsh.d/plugins/zsh-async
+	url = https://github.com/mafredri/zsh-async.git
+[submodule "zsh/.config/zsh.d/plugins/nix-zsh-completions"]
+	path = zsh/.config/zsh.d/plugins/nix-zsh-completions
+	url = https://github.com/spwhitt/nix-zsh-completions.git
