fontconfig: use Andika

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -17,7 +17,8 @@
     <test qual="any" name="family">
       <string>sans-serif</string>
     </test>
-    <edit binding="same" mode="prepend" name="family">
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Andika</string>
       <string>Roboto</string>
       <string>Noto Sans CJK SC</string>
       <string>Noto Sans CJK TC</string>
@@ -39,7 +40,8 @@
     <test qual="any" name="family">
       <string>sans</string>
     </test>
-    <edit binding="same" mode="prepend" name="family">
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Andika</string>
       <string>Roboto</string>
       <string>Noto Sans CJK SC</string>
       <string>Noto Sans CJK TC</string>
@@ -63,7 +65,7 @@
     <test qual="any" name="family">
       <string>serif</string>
     </test>
-    <edit binding="same" mode="prepend" name="family">
+    <edit binding="strong" mode="prepend" name="family">
       <!--
          Its number jump up and down, so disable it
         <string>Zilla Slab</string>
@@ -91,7 +93,7 @@
     <test qual="any" name="family">
       <string>monospace</string>
     </test>
-    <edit binding="same" mode="prepend" name="family">
+    <edit binding="strong" mode="prepend" name="family">
       <!-- We don't replace it with Iosevka because Firefox and Qt don't support OpenType feature, so I can't use ss10 variant -->
       <string>Iosevka SS10</string>
       <string>Iosevka</string>
@@ -116,7 +118,7 @@
     <test qual="any" name="family">
       <string>emoji</string>
     </test>
-    <edit binding="same" mode="prepend" name="family">
+    <edit binding="strong" mode="prepend" name="family">
       <!--
           Twemoji Color Emoji use SVGinOpenType,
           it is only supported by Firefox.
