--- a/fontconfig/.config/fontconfig/conf.d/52-telegram-font.conf
+++ b/fontconfig/.config/fontconfig/conf.d/52-telegram-font.conf
@@ -10,6 +10,7 @@
       <string>sans-serif</string>
     </test>
     <edit binding="same" mode="prepend" name="family">
+      <string>Andika</string>
       <string>Roboto</string>
       <string>Sarasa Gothic SC</string>
       <string>Sarasa Gothic TC</string>
