--- a/fontconfig/.config/fontconfig/conf.d/51-replace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace.conf
@@ -9,6 +9,7 @@
       <string>-apple-system</string>
     </test>
     <edit name="family" binding="same">
+      <string>Andika</string>
       <string>Roboto</string>
     </edit>
   </match>
@@ -17,6 +18,7 @@
       <string>Arial</string>
     </test>
     <edit name="family" binding="same">
+      <string>Andika</string>
       <string>Roboto</string>
     </edit>
   </match>
@@ -25,6 +27,7 @@
       <string>Helvetica</string>
     </test>
     <edit name="family" binding="same">
+      <string>Andika</string>
       <string>Roboto</string>
     </edit>
   </match>
@@ -33,6 +36,7 @@
       <string>Segoe UI</string>
     </test>
     <edit name="family" binding="same">
+      <string>Andika</string>
       <string>Roboto</string>
     </edit>
   </match>
@@ -41,6 +45,7 @@
       <string>Liberation</string>
     </test>
     <edit name="family" binding="same">
+      <string>Andika</string>
       <string>Roboto</string>
     </edit>
   </match>
@@ -52,6 +57,7 @@
       <string>WenQuanYi</string>
     </test>
     <edit name="family" binding="same">
+      <string>Andika</string>
       <string>Roboto</string>
       <string>Noto Sans CJK SC</string>
     </edit>
@@ -61,6 +67,7 @@
       <string>Microsoft YaHei</string>
     </test>
     <edit name="family" binding="same">
+      <string>Andika</string>
       <string>Roboto</string>
       <string>Noto Sans CJK SC</string>
     </edit>
@@ -70,6 +77,7 @@
       <string>微软雅黑</string>
     </test>
     <edit name="family" binding="same">
+      <string>Andika</string>
       <string>Roboto</string>
       <string>Noto Sans CJK SC</string>
     </edit>
@@ -79,6 +87,7 @@
       <string>SimHei</string>
     </test>
     <edit name="family" binding="same">
+      <string>Andika</string>
       <string>Roboto</string>
       <string>Noto Sans CJK SC</string>
     </edit>
