fontconfig: add Plangothic（遍黑体）as fallback

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -26,29 +26,8 @@
       <string>Noto Sans CJK KR</string>
       <!--<string>Noto Sans</string>-->
       <!--补全生僻字-->
-      <string>HanaMinA</string>
-      <string>HanaMinB</string>
-      <string>Twemoji</string>
-      <string>Twitter Color Emoji</string>
-      <string>Blobmoji</string>
-      <string>JoyPixels</string>
-      <string>Noto Color Emoji</string>
-      <string>Noto Emoji</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>sans</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Andika</string>
-      <string>Roboto</string>
-      <string>Noto Sans CJK SC</string>
-      <string>Noto Sans CJK TC</string>
-      <string>Noto Sans CJK JP</string>
-      <string>Noto Sans CJK KR</string>
-      <!--<string>Noto Sans</string>-->
-      <!--补全生僻字-->
+      <string>Plangothic P1</string>
+      <string>Plangothic P2</string>
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
@@ -79,6 +58,8 @@
       <!--补全生僻字-->
       <string>HanaMinA</string>
       <string>HanaMinB</string>
+      <string>Plangothic P1</string>
+      <string>Plangothic P2</string>
       <string>Twemoji</string>
       <string>Twitter Color Emoji</string>
       <string>Blobmoji</string>
@@ -104,6 +85,8 @@
       <string>Sarasa Term J</string>
       <!--string>Symbols Nerd Font</string-->
       <!--补全生僻字-->
+      <string>Plangothic P1</string>
+      <string>Plangothic P2</string>
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
