--- a/fontconfig/etc/conf.avail/66-qt.conf
+++ b/fontconfig/etc/conf.avail/66-qt.conf
@@ -17,7 +17,11 @@
       <family>Noto Sans Egyptian Hieroglyphs</family>
       <!-- 苏美尔楔形文字：𒆠𒂗𒂠 -->
       <family>Noto Sans Cuneiform</family>
-      <!-- 中日韩统一表意文字扩展 C：𫚥 -->
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <family>Plangothic P1</family>
+      <!-- 中日韩统一表意文字扩展 GH： -->
+      <family>Plangothic P2</family>
+      <!-- 中日韩统一表意文字扩展 fallback-->
       <family>HanaMinB</family>
       <!-- 拉让文：ꥃ -->
       <family>Noto Sans Rejang</family>
@@ -55,6 +59,10 @@
       <family>Noto Sans Cuneiform</family>
       <!-- 中日韩统一表意文字扩展 C：𫚥 -->
       <family>HanaMinB</family>
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <family>Plangothic P1</family>
+      <!-- 中日韩统一表意文字扩展 GH： -->
+      <family>Plangothic P2</family>
       <!-- 拉让文：ꥃ -->
       <family>Noto Sans Rejang</family>
       <!-- 越南傣文：ꪀꪑ -->
@@ -89,7 +97,11 @@
       <family>Noto Sans Egyptian Hieroglyphs</family>
       <!-- 苏美尔楔形文字：𒆠𒂗𒂠 -->
       <family>Noto Sans Cuneiform</family>
-      <!-- 中日韩统一表意文字扩展 C：𫚥 -->
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <family>Plangothic P1</family>
+      <!-- 中日韩统一表意文字扩展 GH： -->
+      <family>Plangothic P2</family>
+      <!-- 中日韩统一表意文字扩展 fallback-->
       <family>HanaMinB</family>
       <!-- 拉让文：ꥃ -->
       <family>Noto Sans Rejang</family>
