--- a/vim/.vim/dein.d/normal.toml
+++ b/vim/.vim/dein.d/normal.toml
@@ -248,5 +248,9 @@ on_ft = ['vim']
 repo = 'benknoble/vim-racket'
 on_ft = ['racket', 'scribble', 'racket-info']
 
+[[plugins]]
+repo = 'habamax/vim-rst'
+on_ft = ['rst']
+
 # vim: set sw=4 ts=8 sts=4 et foldmethod=marker:
 # kate: space-indent on; indent-width 4; syntax toml;
