--- a/fontconfig/.config/fontconfig/conf.d/45-setting.conf
+++ b/fontconfig/.config/fontconfig/conf.d/45-setting.conf
@@ -1,84 +1,85 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'urn:fontconfig:fonts.dtd'>
 <fontconfig>
-  <description>渲染设置</description>
-  <match target="scan">
-    <!-- 抗锯齿 -->
-    <!-- 抗锯齿. 除非你的屏幕DPI奇高否则建议开启. -->
-    <edit mode="assign" name="antialias">
-      <bool>true</bool>
-    </edit>
-    <!-- 字体提示 -->
-    <!-- BCI (字节码解释器) -->
-    <edit mode="assign" name="hinting">
-      <bool>true</bool>
-    </edit>
-    <!-- 自动微调 -->
-    <edit mode="assign" name="autohint">
-      <bool>false</bool>
-    </edit>
-    <!-- Hintstyle -->
-    <!-- 字体微调的程度, 可选为 hintnone, hintslight, hintmedium, hintfull. -->
-    <!-- 简单来说，更高的 hinting 等级可以使字体更锐利，但同时也会损失更多的细节. -->
-    <edit mode="assign" name="hintstyle">
-      <const>hintslight</const>
-    </edit>
-    <!-- 像素对齐 -->
-    <!-- 显示器使用的像素排列方式. 现代显示器基本都是用rgb排列. -->
-    <edit mode="assign" name="rgba">
-      <const>rgb</const>
-    </edit>
-    <!-- 亚像素渲染风格：lcdlight表示优先减轻笔画模糊程度，lcddefault表示优先消除彩色边纹 -->
-    <edit name="lcdfilter">
-      <const>lcdlight</const>
-    </edit>
-    <!-- 禁用内嵌点阵字体 -->
-    <edit name="embeddedbitmap">
-      <bool>false</bool>
-    </edit>
-    <!-- 禁用合成粗体 -->
-    <edit name="embolden">
-      <bool>false</bool>
-    </edit>
-  </match>
-  <!-- Twemoji 不支持关闭内嵌点阵 -->
-  <match target="scan">
-    <test name="family" qual="any">
-      <string>Twemoji</string>
-    </test>
-    <edit mode="assign" name="embeddedbitmap">
-      <bool>true</bool>
-    </edit>
-  </match>
-  <!-- Noto Color Emoji 不支持开启抗锯齿和微调，所以在全局开启之后还得给它关掉。 -->
-  <match target="scan">
-    <test name="family" qual="any">
-      <string>Noto Color Emoji</string>
-    </test>
-    <edit mode="assign" name="scalable">
-      <bool>true</bool>
-    </edit>
-    <edit mode="assign" name="embeddedbitmap">
-      <bool>true</bool>
-    </edit>
-    <edit mode="assign" name="hinting">
-      <bool>false</bool>
-    </edit>
-    <edit mode="assign" name="antialias">
-      <bool>false</bool>
-    </edit>
-  </match>
-  <match target="scan">
-    <test compare="contains" name="family" qual="any">
-      <string>Sarasa</string>
-    </test>
-    <edit mode="assign" name="hinting">
-      <bool>false</bool>
-    </edit>
-    <edit mode="assign" name="autohint">
-      <bool>false</bool>
-    </edit>
-  </match>
+ <description>渲染设置</description>
+ <match target="scan">
+  <!-- 抗锯齿 -->
+  <!-- 抗锯齿. 除非你的屏幕DPI奇高否则建议开启. -->
+  <edit mode="assign" name="antialias">
+   <bool>true</bool>
+  </edit>
+  <!-- 字体提示 -->
+  <!-- BCI (字节码解释器) -->
+  <edit mode="assign" name="hinting">
+   <bool>true</bool>
+  </edit>
+  <!-- 自动微调 -->
+  <edit mode="assign" name="autohint">
+   <bool>false</bool>
+  </edit>
+  <!-- Hintstyle -->
+  <!-- 字体微调的程度, 可选为 hintnone, hintslight, hintmedium, hintfull. -->
+  <!-- 简单来说，更高的 hinting 等级可以使字体更锐利，但同时也会损失更多的细节. -->
+  <edit mode="assign" name="hintstyle">
+   <const>hintslight</const>
+  </edit>
+  <!-- 像素对齐 -->
+  <!-- 显示器使用的像素排列方式. 现代显示器基本都是用rgb排列. -->
+  <edit mode="assign" name="rgba">
+   <const>rgb</const>
+  </edit>
+  <!-- 亚像素渲染风格：lcdlight表示优先减轻笔画模糊程度，lcddefault表示优先消除彩色边纹 -->
+  <edit name="lcdfilter">
+   <const>lcdlight</const>
+  </edit>
+  <!-- 禁用内嵌点阵字体 -->
+  <edit name="embeddedbitmap">
+   <bool>false</bool>
+  </edit>
+  <!-- 禁用合成粗体 -->
+  <edit name="embolden">
+   <bool>false</bool>
+  </edit>
+ </match>
+ <!-- Twemoji 不支持关闭内嵌点阵 -->
+ <match target="scan">
+  <test qual="any" name="family">
+   <string>Twemoji</string>
+  </test>
+  <edit mode="assign" name="embeddedbitmap">
+   <bool>true</bool>
+  </edit>
+ </match>
+ <!-- Noto Color Emoji 不支持开启抗锯齿和微调，所以在全局开启之后还得给它关掉。 -->
+ <match target="scan">
+  <test qual="any" name="family">
+   <string>Noto Color Emoji</string>
+  </test>
+  <edit mode="assign" name="scalable">
+   <bool>true</bool>
+  </edit>
+  <edit mode="assign" name="embeddedbitmap">
+   <bool>true</bool>
+  </edit>
+  <edit mode="assign" name="hinting">
+   <bool>false</bool>
+  </edit>
+  <edit mode="assign" name="antialias">
+   <bool>false</bool>
+  </edit>
+ </match>
+ <match target="scan">
+  <test compare="contains" qual="any" name="family">
+   <string>Sarasa</string>
+  </test>
+  <edit mode="assign" name="hinting">
+   <bool>false</bool>
+  </edit>
+  <edit mode="assign" name="autohint">
+   <bool>false</bool>
+  </edit>
+ </match>
+ <dir>~/.fonts</dir>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
 <!-- kate: space-indent on; indent-width 2; -->
