fontconfig: Plangothic project changed font name

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -26,6 +26,7 @@
       <string>Noto Sans CJK KR</string>
       <!--<string>Noto Sans</string>-->
       <!--补全生僻字-->
+      <string>Plangothic Release</string>
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
       <string>HanaMinA</string>
@@ -58,6 +59,7 @@
       <!--补全生僻字-->
       <string>HanaMinA</string>
       <string>HanaMinB</string>
+      <string>Plangothic Release</string>
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
       <string>Twemoji</string>
@@ -85,6 +87,7 @@
       <string>Sarasa Term J</string>
       <!--string>Symbols Nerd Font</string-->
       <!--补全生僻字-->
+      <string>Plangothic Release</string>
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
       <string>HanaMinA</string>
