--- a/fontconfig/.config/fontconfig/conf.d/53-firefox-font.conf
+++ b/fontconfig/.config/fontconfig/conf.d/53-firefox-font.conf
@@ -9,7 +9,7 @@
     <test qual="any" name="family">
       <string>emoji</string>
     </test>
-    <edit binding="same" mode="assign" name="family">
+    <edit binding="strong" mode="prepend" name="family">
       <!--
           Twemoji Color Emoji use SVGinOpenType,
           it is only supported by Firefox.
