--- a/fcitx5/.config/fcitx5/conf/classicui.conf
+++ b/fcitx5/.config/fcitx5/conf/classicui.conf
@@ -7,9 +7,9 @@ WheelForPaging=True
 # 字体
 Font="霞鹜文楷 Bold 12"
 # 菜单字体
-MenuFont="Sans 10"
+MenuFont="霞鹜文楷 Bold 10"
 # 托盘字体
-TrayFont="Sans Bold 10"
+TrayFont="霞鹜文楷 Bold 10"
 # 托盘标签轮廓颜色
 TrayOutlineColor=#000000
 # 托盘标签文本颜色
@@ -22,4 +22,6 @@ ShowLayoutNameInIcon=True
 UseInputMethodLangaugeToDisplayText=True
 # 主题
 Theme=Material-Color-SakuraPink
+# 固定 Wayland 的字体 DPI
+ForceWaylandDPI=0
 
