pacman: clean up

--- a/pacman-backup/etc/pacman.conf
+++ b/pacman-backup/etc/pacman.conf
@@ -22,7 +22,8 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-IgnorePkg   =
+#IgnorePkg =
+#IgnorePkg = firefox-nightly-zh-cn
 IgnoreGroup = kdegames
 
 #NoUpgrade   =
@@ -35,7 +36,7 @@ Color
 CheckSpace
 VerbosePkgLists
 ILoveCandy
-#ParallelDownloads = 5
+ParallelDownloads = 10
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -66,10 +67,6 @@ LocalFileSigLevel = Optional
 # uncommented to enable the repo.
 #
 
-# The testing repositories are disabled by default. To enable, uncomment the
-# repo name header and Include lines. You can add preferred servers immediately
-# after the header, and they will be used before the default mirrors.
-
 #[kde-unstable]
 #Include = /etc/pacman.d/mirrorlist
 
@@ -88,52 +85,45 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
-# If you want to run 32 bit applications on your x86_64 system,
-# enable the multilib repositories as required here.
-
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
-# An example of a custom package repository.  See the pacman manpage for
-# tips on creating your own repositories.
-#[custom]
-#SigLevel = Optional TrustAll
-#Server = file:///home/custompkgs#
-
 [archlinuxcn]
 #Server = https://mirrors.tuna.tsinghua.edu.cn/archlinuxcn/$arch
 Include = /etc/pacman.d/archlinuxcn-mirrorlist
 
-[repo-ck]
-Server = https://mirrors.tuna.tsinghua.edu.cn/repo-ck/$arch
-Server = https://mirrors.bfsu.edu.cn/repo-ck/$arch
-
-[arch4edu]
-Server = https://mirrors.tuna.tsinghua.edu.cn/arch4edu/$arch
-Server = https://mirrors.bfsu.edu.cn/arch4edu/$arch
+#[archstrike]
+#Server = https://mirror.archstrike.org/$arch/$repo
+#Include = /etc/pacman.d/archstrike-mirrorlist
 
 #[blackarch]
 #SigLevel = DatabaseNever TrustAll
 #Include = /etc/pacman.d/blackarch-mirrorlist
 
-#[chaotic-aur]
-#Server = http://lonewolf-builder.duckdns.org/$repo/x86_64
-#Server = http://chaotic.bangl.de/$repo/x86_64
-#Server = https://repo.kitsuna.net/x86_64
+#[lightquantum]
+#SigLevel = Never
+#Server = https://repo.lightquantum.me
 
-#[nickcao]
-#Server = https://repo.nichi.co/$arch
+#[Clansty]
+#SigLevel = Never
+# Peking Tencent
+#Server = https://repo.lwqwq.com/archlinux/$arch
+#Server = https://pacman.ltd/archlinux/$arch # CF
+#Server = https://repo.clansty.com/archlinux/$arch # CF
 
-#[origincode]
-#Server = https://repo.origincode.me/repo/$arch
-#Server = https://build.archlinuxcn.org/~origincode/repo/$arch
+#[kunoisayami]
+#Server = https://sh.cn.repo.shabiwangyou.com:8443/$arch
+#Server = https://gz.cn.repo.shabiwangyou.com:8443/$arch
 
-# Qt With Debug Symbol
-#[qt-debug]
-#Server = https://qutebrowser.org/qt-debug/$arch
+[alerque]
+Server = https://arch.alerque.com/$arch
+
+[aur]
+SigLevel = PackageOptional DatabaseOptional
+Server = file:///var/lib/repo/aur
 
 # Python Version
 #[python]
