fontconfig: Plangothic change name back

--- a/fontconfig/etc/conf.avail/66-qt.conf
+++ b/fontconfig/etc/conf.avail/66-qt.conf
@@ -17,10 +17,9 @@
       <family>Noto Sans Egyptian Hieroglyphs</family>
       <!-- 苏美尔楔形文字：𒆠𒂗𒂠 -->
       <family>Noto Sans Cuneiform</family>
-      <!-- 中日韩统一表意文字扩展 BCDEFGH：𫚥 -->
-      <string>Plangothic Release</string>
-      <!-- 中日韩统一表意文字扩展 BCDEFGH (old version) -->
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
       <family>Plangothic P1</family>
+      <!-- 中日韩统一表意文字扩展 GH：𰻝 -->
       <family>Plangothic P2</family>
       <!-- 中日韩统一表意文字扩展 fallback-->
       <family>HanaMinB</family>
@@ -60,10 +59,9 @@
       <family>Noto Sans Cuneiform</family>
       <!-- 中日韩统一表意文字扩展 C：𫚥 -->
       <family>HanaMinB</family>
-      <!-- 中日韩统一表意文字扩展 BCDEFGH：𫚥 -->
-      <string>Plangothic Release</string>
-      <!-- 中日韩统一表意文字扩展 BCDEFGH (old version) -->
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
       <family>Plangothic P1</family>
+      <!-- 中日韩统一表意文字扩展 GH：𰻝 -->
       <family>Plangothic P2</family>
       <!-- 拉让文：ꥃ -->
       <family>Noto Sans Rejang</family>
@@ -99,10 +97,9 @@
       <family>Noto Sans Egyptian Hieroglyphs</family>
       <!-- 苏美尔楔形文字：𒆠𒂗𒂠 -->
       <family>Noto Sans Cuneiform</family>
-      <!-- 中日韩统一表意文字扩展 BCDEFGH：𫚥 -->
-      <string>Plangothic Release</string>
-      <!-- 中日韩统一表意文字扩展 BCDEFGH (old version) -->
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
       <family>Plangothic P1</family>
+      <!-- 中日韩统一表意文字扩展 GH：𰻝 -->
       <family>Plangothic P2</family>
       <!-- 中日韩统一表意文字扩展 fallback-->
       <family>HanaMinB</family>
