--- a/envvars/.config/environment.d/50-hardware-acceleration.conf
+++ b/envvars/.config/environment.d/50-hardware-acceleration.conf
@@ -3,9 +3,9 @@
 #VK_ICD_FILENAMES=/usr/share/vulkan/icd.d/nvidia_icd.json
 #LIBVA_DRIVER_NAME=nvidia
 
-LIBVA_DRIVER_NAME=iHD
+LIBVA_DRIVER_NAME=radeonsi
 LIBVA_DRIVERS_PATH=/usr/lib/dri/
-VDPAU_DRIVER=nvidia
+VDPAU_DRIVER=radeonsi
 
 # Enbale for GStreamer
 # https://wiki.archlinux.org/title/GStreamer#Hardware_video_acceleration
