tmux: add sysstat

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -60,12 +60,12 @@ set -g message-style bg=brightblack,fg=cyan
 set -g message-command-style bg=brightblack,fg=cyan
 set -g @prefix_highlight_copy_mode_attr "fg=black,bg=brightcyan"
 set -g status-left "#{prefix_highlight} #[fg=black,bg=bold][#S] "
-set -g status-right "Load:#[fg=green] #(cat /proc/loadavg | cut -f1,2,3 -d' ') #[fg=white,bg=brightblack] %Y-%m-%d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]|#[fg=white,bg=brightblack] %H:%M #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore] #[fg=black,bg=cyan,nobold] #H "
+set -g status-right "#{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} #[fg=white,bg=brightblack] %Y-%m-%d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]|#[fg=white,bg=brightblack] %H:%M #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore] #[fg=black,bg=cyan,nobold] #H "
 set -g window-status-format " #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack]#W #F"
 set -g window-status-current-format "#[fg=black,bg=blue] #I#[fg=black,bg=blue,nobold,noitalics,nounderscore] #[fg=black,bg=blue]#W #F"
 set -g window-status-separator " "
 set -g status-left-length 100
-set -g status-right-length 100
+set -g status-right-length 130
 
 # Prefix Highlight
 set -g @prefix_highlight_fg 'white' # default is 'colour231'
@@ -75,12 +75,19 @@ set -g @prefix_highlight_empty_prompt 'Tmux'
 set -g @prefix_highlight_output_prefix '< '
 set -g @prefix_highlight_output_suffix ' >'
 
+# sysstat
+set -g @sysstat_mem_size_unit "G"
+set -g @sysstat_mem_view_tmpl 'MEM: #[fg=#{mem.color}]#{mem.pused}#[default] @ #{mem.used}/#{mem.total}'
+set -g @sysstat_swap_view_tmpl 'SWAP: #[fg=#{swap.color}]#{swap.pused}#[default] @ #{swap.used}/#{swap.total}'
+set -g @sysstat_cpu_view_tmpl 'CPU: #[fg=#{cpu.color}]#{cpu.pused}#[default]'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
 # Automatic tpm installation
 bind M-i if-shell "test ! -d ~/.local/share/tmux/plugins/tpm" \
