vim: add plugin AndrewRadev/splitjoin.vim

--- a/vim/.vim/dein.d/normal.toml
+++ b/vim/.vim/dein.d/normal.toml
@@ -123,6 +123,9 @@ repo = 'machakann/vim-sandwich'
 repo = 'egberts/vim-syntax-bind-named'
 
 [[plugins]]
+repo = 'AndrewRadev/splitjoin.vim'
+
+[[plugins]]
 repo = 'octol/vim-cpp-enhanced-highlight'
 on_ft = ['c', 'cpp']
 
