tmux: use 1-index

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -46,6 +46,10 @@ bind-key - split-window -v
 # set border style
 set -g pane-border-lines double
 
+# Start index of window/pane with 1, because we're humans, not computers
+set -g base-index 1
+setw -g pane-base-index 1
+
 # Theme
 set -g status-interval 1
 set -g status on
