aira2: disable download notification

--- a/aria2/.aria2/aria2.conf
+++ b/aria2/.aria2/aria2.conf
@@ -54,8 +54,8 @@ save-session-interval=60
 
 #Event Hook
 #https://aria2.github.io/manual/en/html/aria2c.html#event-hook
-on-download-start=/home/coelacanthus/.aria2/download-start.sh
-on-download-complete=/home/coelacanthus/.aria2/download-finish.sh
+#on-download-start=/home/coelacanthus/.aria2/download-start.sh
+#on-download-complete=/home/coelacanthus/.aria2/download-finish.sh
 on-download-error=/home/coelacanthus/.aria2/download-error.sh
 
 ## RPC相关设置 ##
