--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,5 +1,5 @@
 [user]
-    email = coelacanthus@outlook.com
+    email = CoelacanthusHex@gmail.com
     name = Coelacanthus
     signingkey = E35C89E45867AE35
 
