--- a/git/.config/git/sendmail.config
+++ b/git/.config/git/sendmail.config
@@ -1,7 +1,7 @@
 [sendemail]
     smtpserver = /usr/bin/msmtp
     smtpserveroption = -a
-    smtpserveroption = outlook
+    smtpserveroption = gmail
 
 # vim: set ft=gitconfig et:
 # kate: space-indent on; indent-width 4; syntax toml;
