env: fix libreoffice UI style

--- a/envvars/.config/environment.d/60-theme.conf
+++ b/envvars/.config/environment.d/60-theme.conf
@@ -1,5 +1,5 @@
 # no CSD
-#GTK_CSD=0
+GTK_CSD=0
 
 # use plasma dialog as default, it need openSUSE patch in the past
 # now Firefox has native support
@@ -12,4 +12,4 @@ GTK_USE_PORTAL=1
 
 # https://wiki.archlinux.org/index.php/LibreOffice#Theme
 # https://github.com/LibreOffice/core/blob/master/vcl/README#L35
-#SAL_USE_VCLPLUGIN=kde5
+SAL_USE_VCLPLUGIN=kf5
