--- a/pacman-backup/etc/pacman.conf
+++ b/pacman-backup/etc/pacman.conf
@@ -28,6 +28,7 @@ IgnoreGroup = kdegames
 
 #NoUpgrade   =
 #NoExtract   =
+NoExtract = etc/xdg/autostart/org.fcitx.Fcitx5.desktop
 
 # Misc options
 #UseSyslog
@@ -67,11 +68,11 @@ LocalFileSigLevel = Optional
 # uncommented to enable the repo.
 #
 
-#[kde-unstable]
-#Include = /etc/pacman.d/mirrorlist
+[kde-unstable]
+Include = /etc/pacman.d/mirrorlist
 
-#[testing]
-#Include = /etc/pacman.d/mirrorlist
+[testing]
+Include = /etc/pacman.d/mirrorlist
 
 [core]
 Include = /etc/pacman.d/mirrorlist
@@ -79,14 +80,14 @@ Include = /etc/pacman.d/mirrorlist
 [extra]
 Include = /etc/pacman.d/mirrorlist
 
-#[community-testing]
-#Include = /etc/pacman.d/mirrorlist
+[community-testing]
+Include = /etc/pacman.d/mirrorlist
 
 [community]
 Include = /etc/pacman.d/mirrorlist
 
-#[multilib-testing]
-#Include = /etc/pacman.d/mirrorlist
+[multilib-testing]
+Include = /etc/pacman.d/mirrorlist
 
 [multilib]
 Include = /etc/pacman.d/mirrorlist
@@ -95,9 +96,16 @@ Include = /etc/pacman.d/mirrorlist
 #Server = https://mirrors.tuna.tsinghua.edu.cn/archlinuxcn/$arch
 Include = /etc/pacman.d/archlinuxcn-mirrorlist
 
-#[archstrike]
-#Server = https://mirror.archstrike.org/$arch/$repo
+[archstrike]
+Server = https://mirror.archstrike.org/$arch/$repo
 #Include = /etc/pacman.d/archstrike-mirrorlist
+
+[archzfs]
+Server = https://archzfs.com/$repo/$arch
+#Server = http://mirror.sum7.eu/archlinux/archzfs/$repo/$arch
+#Server = https://mirror.biocrafting.net/archlinux/archzfs/$repo/$arch
+#Server = https://mirror.in.themindsmaze.com/archzfs/$repo/$arch
+#Server = https://zxcvfdsa.com/archzfs/$repo/$arch
 
 #[blackarch]
 #SigLevel = DatabaseNever TrustAll
@@ -121,9 +129,9 @@ Include = /etc/pacman.d/archlinuxcn-mirrorlist
 [alerque]
 Server = https://arch.alerque.com/$arch
 
-[aur]
+[aurlocalrepo]
 SigLevel = PackageOptional DatabaseOptional
-Server = file:///var/lib/repo/aur
+Server = file:///var/lib/repo/aurlocalrepo
 
 # Python Version
 #[python]
