ssh: use proxy for qt

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -20,6 +20,11 @@ Host codereview.qt-project.org
     IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
     PubkeyAcceptedKeyTypes +ssh-rsa
     MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha1
+    ProxyUseFdpass yes
+    # socks5 proxy
+    ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
+    # http proxy
+    #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
 
 Host archlinuxcn
     User coelacanthus
