gpg: harden gpg fetch

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -98,7 +98,7 @@ keyserver hkps://keys.gnupg.net
 #keyserver hkps://pgp.surfnet.nl
 #keyserver hkps://pgp.gnd.pw
 
-auto-key-retrieve
+#auto-key-retrieve
 
 
 #--------------------------------------
