--- a/sysctl/99-harden.conf
+++ b/sysctl/99-harden.conf
@@ -3,18 +3,9 @@
 # Contributor: K4YT3X
 # Contributor: IceCodeNew
 # Contributor: HorlogeSkynet
-# Date Created: October 5, 2020
-# Last Updated: October 17, 2021
-
-# Licensed under the GNU General Public License Version 3 (GNU GPL v3),
-#   available at: https://www.gnu.org/licenses/gpl-3.0.txt
-# (C) 2020-2021 K4YT3X
-# (C) 2021      Coelacanthus
-
-# Multiple sources have been consulted while writing this configuration
-#  file (e.g., nixCraft's sysctl.conf). Sources are not cited since this
-#  is not an academic document. Please refer to Linux documentations
-#  should you have any questions.
+# SPDX-License-Identifier: GPL-3.0-or-later
+# Date Created: 2020-10-05
+# Last Updated: 2022-09-25
 
 ########## Kernel ##########
 
@@ -40,6 +31,7 @@ kernel.core_uses_pid = 1
 kernel.kptr_restrict = 1
 
 # Ptrace protection using Yama
+#   - 0: disable
 #   - 1: only a parent process can be debugged
 #   - 2: only admins canuse ptrace (CAP_SYS_PTRACE capability required)
 #   - 3: disables ptrace completely, reboot is required to re-enable ptrace
@@ -49,27 +41,24 @@ kernel.yama.ptrace_scope = 0
 kernel.dmesg_restrict = 1
 
 # restrict BPF JIT compiler to root only
-kernel.unprivileged_bpf_disabled = 1
+#kernel.unprivileged_bpf_disabled = 1
 
 # disables kexec as it can be used to livepatch the running kernel
-kernel.kexec_load_disabled = 0
+#kernel.kexec_load_disabled = 1
 
 # enable unprivileged user namespaces to use bubblewrap
 kernel.unprivileged_userns_clone = 1
-
-# allow for more PIDs
-# this value can be up to:
-#   - 32768 (2^15) on a 32-bit system
-#   - 4194304 (2^22) on a 64-bit system
-kernel.pid_max = 4194304
 
 # reboot machine after kernel panic
 #kernel.panic = 10
 
 # restrict perf subsystem usage
-kernel.perf_event_paranoid = 1
+#kernel.perf_event_paranoid = 3
 #kernel.perf_cpu_time_max_percent = 1
-#kernel.perf_event_max_sample_rate = 0
+#kernel.perf_event_max_sample_rate = 1
+
+# prevent unprivileged attackers from loading vulnerable line disciplines with the TIOCSETD ioctl
+#dev.tty.ldisc_autoload = 0
 
 ########## File System ##########
 
@@ -94,64 +83,28 @@ fs.protected_fifos = 2
 # similar to protected_fifos, but it avoids writes to an attacker-controlled regular file
 fs.protected_regular = 2
 
-# increase system file descriptor limit
-# this value can be up to:
-#   - 2147483647 (0x7fffffff) on a 32-bit system
-#   - 9223372036854775807 (0x7fffffffffffffff) on a 64-bit system
-# be aware that the Linux kernel documentation suggests that inode-max should be 3-4 times
-#   larger than this value
-fs.file-max = 9223372036854775807
-
-# increase the amount of files that can be watched
-# each file watch handle takes 1080 bytes
-# up to 540 MiB of memory will be consumed if all 524288 handles are used
-fs.inotify.max_user_watches = 524288
-
 ########## Virtualization ##########
 
 # do not allow mmap in lower addresses
 vm.mmap_min_addr = 65536
 
-# improve mmap ASLR effectness
-vm.mmap_rnd_bits=32
-vm.mmap_rnd_compat_bits=16
+# improve mmap ASLR effectiveness
+vm.mmap_rnd_bits = 32
+vm.mmap_rnd_compat_bits = 16
+
+# prevent unprivileged users from accessing userfaultfd
+# restricts syscall to the privileged users or the CAP_SYS_PTRACE capability
+#vm.unprivileged_userfaultfd = 0
 
 ########## Networking ##########
-
-# increase the maximum length of processor input queues
-net.core.netdev_max_backlog = 250000
 
 # enable BPF JIT hardening for all users
 # this trades off performance, but can mitigate JIT spraying
 #net.core.bpf_jit_harden = 2
 
-# increase TCP max buffer size setable using setsockopt()
-net.core.rmem_max = 16777216
-net.core.wmem_max = 16777216
-net.core.rmem_default = 8388608
-net.core.wmem_default = 8388608
-net.core.optmem_max = 65536
-
-# queue disciplines
-# available: pfifo_fast(default) fq codel fq_codel cake(4.19)
-# https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netcoredefault_qdisc
-net.core.default_qdisc = cake
-
 ########## IPv4 Networking ##########
 
-# TCP Congestion Control Algorithm
-# available: reno cubic bbr bbr2 hybla highspeed htcp veno westwood vegas
-# cubic is default algorithm on Linux since 2.6.19
-# westwood is suitable for wireless networks but cannot distinguish between network congestion and wireless jitter, and has low universality
-# https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netipv4tcp_congestion_control
-# https://aws.amazon.com/cn/blogs/china/talking-about-network-optimization-from-the-flow-control-algorithm/
-# https://toonk.io/tcp-bbr-exploring-tcp-congestion-control/index.html
-# https://dropbox.tech/infrastructure/evaluating-bbrv2-on-the-dropbox-edge-network
-# https://blog.csdn.net/dog250/article/details/120336563
-# https://blog.csdn.net/dog250/article/details/113803334
-net.ipv4.tcp_congestion_control = cubic
-
-# disallow IPv4 packet forwarding
+# allow IPv4 packet forwarding
 net.ipv4.ip_forward = 1
 
 # enable SYN cookies for SYN flooding protection
@@ -218,10 +171,7 @@ net.ipv4.tcp_rfc1337 = 1
 # this makes the host less susceptible to TCP RST DoS attacks
 # but we open it now
 # https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netipv4tcp_window_scaling
-net.ipv4.tcp_window_scaling = 1
-
-# increase system IP port limits
-net.ipv4.ip_local_port_range = 1024 65535
+#net.ipv4.tcp_window_scaling = 0
 
 # TCP timestamps could provide protection against wrapped sequence numbers,
 #   but the host's uptime can be calculated precisely from its timestamps
@@ -232,27 +182,10 @@ net.ipv4.ip_local_port_range = 1024 65535
 # - 2: enable timestamps without random offsets
 net.ipv4.tcp_timestamps = 1
 
-# enabling SACK can increase the throughput
-# but SACK is commonly exploited and rarely used
-net.ipv4.tcp_sack = 1
-net.ipv4.tcp_dsack = 1
-
-# divide socket buffer evenly between TCP window size and application
-net.ipv4.tcp_adv_win_scale = 1
-
-# SSR could impact TCP's performance on a fixed-speed network (e.g., wired)
-#   but it could be helpful on a variable-speed network (e.g., LTE)
-# uncomment this if you are on a fixed-speed network
-net.ipv4.tcp_slow_start_after_idle = 0
-
 # enabling MTU probing helps mitigating PMTU blackhole issues
 # this may not be desirable on congested networks
 net.ipv4.tcp_mtu_probing = 1
 net.ipv4.tcp_base_mss = 1024
-
-# increase memory thresholds to prevent packet dropping
-net.ipv4.tcp_rmem = 16384 262144 8388608
-net.ipv4.tcp_wmem = 32768 524288 16777216
 
 ########## IPv6 Networking ##########
 
